Fix selection overflow problem

--- a/style.css
+++ b/style.css
@@ -131,6 +131,10 @@ textarea {
     padding-bottom: 100px;
 }
 
+#outputTranslation {
+    margin-bottom: 150px;
+}
+
 .row.translation-picker {
     display: inline-block !important;
     margin-top: 15px !important;
@@ -143,6 +147,10 @@ textarea {
 .bootstrap-select>.dropdown-toggle.bs-placeholder, .bootstrap-select>.dropdown-toggle.bs-placeholder:active, .bootstrap-select>.dropdown-toggle.bs-placeholder:focus, .bootstrap-select>.dropdown-toggle.bs-placeholder:hover {
     color: #fff !important;
     margin-bottom: 10px;
+}
+
+.dropdown-menu {
+    max-height: 250px !important;
 }
   
 
